--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,13 @@ body {
 }
 
 .container {
-  max-width: 1770px;
+  max-width: 1230px;
   width: 100%;
-  padding: 0 15px;
+  padding: 0 9px;
 }
 
 .row {
-  margin: 0 -15px;
+  margin: 0 -9px;
 }
 
 .col-lg-1,
@@ -71,7 +71,7 @@ body {
 .col-xs-7,
 .col-xs-8,
 .col-xs-9 {
-  padding: 0 15px;
+  padding: 0 9px;
 }
 
 a {
@@ -111,4 +111,389 @@ ul {
   margin: 0;
 }
 
+:root {
+  --main-bg-color: #F1F1F4;
+}
 
+.topheader {
+  
+}
+
+.topheader__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+     border-bottom: 1px solid #E2E2E2;
+ padding: 14px 0;
+}
+
+.topheader__left {
+  display: flex;
+  align-items: center;
+}
+.toplink {
+  padding: 0 16px;
+
+}
+.toplink a {
+  font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 130%;
+/* identical to box height, or 21px */
+
+
+/* Gray */
+
+color: #818A8A;
+}
+.toplink a span  {
+  padding-left: 9px;
+}
+.topheader__links {
+  margin: 0 -16px;
+  display: flex;
+  align-items: center;
+}
+.topheader__email {}
+.topheader__right {}
+.callback {}
+.link {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 120%;
+  color: #CE9D70;
+}
+.phone {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 120%;
+  color: #1E1E20;
+}
+.phone span {
+  padding-left: 9px;
+}
+.topheader__right {
+    display: flex;
+  align-items: center;
+  margin: 0 -12px;
+}
+.topheader__right > * {
+  padding: 0 12px;
+}
+
+.mainheader {
+   margin: 0 -16px;
+  display: flex;
+  align-items: center;
+}
+.mainheader__wrapper > * {
+  padding: 0 15px;
+}
+.logo {}
+.mainmenu  {
+}
+.mainmenu > ul {
+  display: flex;
+  align-items: center;
+  margin: 0 -12px;
+}
+.mainmenu > ul > li {
+  padding: 0 12px 32px 12px;
+  margin-top: 30px;
+
+}
+.mainmenu > ul > li > a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 120%;
+  color: #1E1E20;
+  padding-bottom: 6px;
+  border-bottom: 2px solid transparent;
+}
+
+.mainmenu > ul > li > a:hover {
+  border-bottom: 2px solid #49A399;
+}
+
+.mainmenu > ul > li.active > a {
+  border-bottom: 2px solid #49A399;
+}
+
+
+
+.parent {
+  position: relative;
+}
+.submenu {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  min-width: 220px;
+  z-index: 1;
+  background: #FFFFFF;
+  box-shadow: 0px 6px 18px rgba(72, 58, 45, 0.1);
+  border-radius: 4px;
+}
+.submenu li {
+}
+.submenu li a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  color: #1E1E20;
+  padding: 12px 16px;
+      display: block;
+}
+.submenu li a:hover {
+  color: #49A399;
+}
+.mainmenu > ul > li:hover .submenu {
+  display: block;
+}
+.mainheader__button {}
+.btn_border {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height, or 150% */
+  border: 1px solid #49A399;
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: inline-block;
+
+  text-align: center;
+
+  /* Green */
+  padding: 8px 24px;
+  color: #49A399;
+
+}
+.btn_border:hover {
+  background: #49A399;
+  color: #FFFFFF;
+}
+.btn_border:focus {
+  background: #40958B;
+  color: #FFFFFF;
+}
+
+.btn_border:disabled {
+  background: #F1F1F4;
+  color: #818A8A;
+}
+
+
+
+.mainheader__wrapper {
+  display: flex;
+  align-items: center;
+  margin: 0 -15px;
+  justify-content: space-between;
+}
+
+
+.indexblock .header {
+   background-color: var(--main-bg-color);
+
+}
+
+.indexcontent {
+  background-position: center;
+  background-size: cover;
+  background: linear-gradient(271.1deg, rgba(241, 241, 244, 0) 18.17%, rgba(241, 241, 244, 0.47) 34.08%, rgba(241, 241, 244, 0.75) 41.12%, #F1F1F4 52.96%), url(/images/bg1.jpg);
+}
+
+.indexcontent__wrapper {
+  min-height: 686px;
+  display: flex;
+  align-items: center;
+}
+.mainblock__name {
+ font-family: 'Cormorant Garamond';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 120%;
+ 
+  color: #818A8A;
+}
+.mainblock {}
+.mainblock__name {}
+.mainblock__title {}
+.mainblock__form {}
+.mainblock__video {}
+
+h1 {
+ font-family: 'Cormorant Garamond';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 110%;
+  color: #1E1E20;
+  font-feature-settings: 'pnum' on, 'lnum' on;
+}
+
+mark {
+  background: #DCE4E1;
+      padding: 0 10px
+}
+
+.mainblock__title {
+  margin-bottom: 54px;
+}
+
+.mainblock__form {
+  margin-bottom: 50px;
+}
+.mainblock__video img {
+  display: inline-block;
+vertical-align: middle;
+}
+.mainblock__video span {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  /* or 21px */
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 154px;
+
+  /* Gray */
+
+  color: #818A8A;
+  padding-left: 14px;
+}
+.form_row .form__items {
+  max-width: 1115px;
+  display: flex;
+  height: 80px;
+  overflow: hidden;
+  box-shadow: 0px 6px 18px rgba(72, 58, 45, 0.1);
+  border-radius: 4px;
+}
+.form_row input {
+    font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  
+  color: #1E1E20;
+  display: block;
+  background-color: #fff;
+  border:none;
+  height: 100%;
+}
+
+.form_row input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+ font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  
+  color: #1E1E20;
+}
+.form_row input::-moz-placeholder { /* Firefox 19+ */
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  
+  color: #1E1E20;
+}
+.form_row input:-ms-input-placeholder { /* IE 10+ */
+ font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  
+  color: #1E1E20;
+}
+.form_row input:-moz-placeholder { /* Firefox 18- */
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  
+  color: #1E1E20;
+}
+
+.input-date {
+  width: 349px;
+
+}
+
+.input-date {
+  background-image: url(/images/calendar.svg);
+  background-position: left 50px center;
+  background-repeat: no-repeat;
+  padding-left: 95px;
+}
+
+.input-persons {
+  background-image: url(/images/users.svg);
+  background-position: left 32px center;
+  background-repeat: no-repeat;
+  padding-left: 70px;
+}
+
+.input-childs {
+  background-image: url(/images/smile.svg);
+  background-position: left 32px center;
+  background-repeat: no-repeat;
+  padding-left: 70px;
+}
+
+
+
+.form__item {
+  height: 100%;
+}
+
+.form_row button {
+    font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  
+  color: #1E1E20;
+  display: block;
+  background-color: #fff;
+  border:none;
+  height: 100%;
+}
+
+.form_row button  {
+  width: 238px;
+}
+
+button.btn_main, a.btn_main {
+  background-color: #49A399;
+  color: #fff;
+  display: inline-block;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+
+button.btn_main:hover, a.btn_main:hover {
+  background-color: #40958B;
+  box-shadow: 0px 2px 16px rgba(67, 160, 150, 0.45);
+  color: #FFFFFF;
+}
+button.btn_main:focus, a.btn_main:focus {
+  background-color: #40958B;
+  color: #FFFFFF;
+}
+
+button.btn_main:disabled, a.btn_main:disabled {
+  background-color: #F1F1F4;
+  color: #818A8A;
+}
