--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,8 @@ ul {
   padding: 0 16px;
 
 }
-.toplink a {
+.toplink a,
+.toplink span {
   font-style: normal;
 font-weight: normal;
 font-size: 16px;
@@ -1292,3 +1293,275 @@ p a {
   max-width: 700px;
   margin: auto;
 }
+
+.map {
+  position: relative;
+}
+
+.contacts {
+  position: absolute;
+  bottom: 65px;
+  background: #fff;
+  padding: 54px 54px;
+  border-radius: 8px;
+  width: 456px;
+}
+
+.contacts:after {
+    border: 1px solid #CE9D70;
+    box-sizing: border-box;
+    border-radius: 8px;
+    width: 100%;
+    height: 100%;
+    top: -16px;
+    right: -16px;
+    position: absolute;
+    content: "";
+    transition: all 0.3s ease;
+}
+.contacts__title img {
+    display: inline-block;
+  vertical-align: middle;
+}
+
+.contacts__title span {
+  font-family: 'Cormorant Garamond';
+  display: inline-block;
+  vertical-align: middle;
+font-style: normal;
+font-weight: bold;
+font-size: 28px;
+line-height: 110%;
+/* identical to box height, or 31px */
+padding-left: 7px;
+font-feature-settings: 'pnum' on, 'lnum' on;
+
+/* Black */
+
+color: #1E1E20;
+}
+.contacts__title {
+  margin-bottom: 14px;
+}
+.contacts__text {
+  font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 130%;
+/* or 21px */
+padding-left: 36px;
+
+/* Gray */
+ margin-bottom: 14px;
+color: #818A8A;
+}
+
+.contacts__block {
+  margin-bottom: 45px;
+}
+
+.btn_maps {
+  display: block;
+  line-height: 56px;
+  white-space: nowrap;
+height: 56px;
+
+
+background: #EED547;
+border-radius: 4px;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+
+text-align: center;
+
+/* Black */
+
+color: #1E1E20;
+}
+
+.ya {
+  color: red;
+}
+
+.ya_maps {
+  font-weight: 400;
+}
+
+.map > img {
+  max-width: initial;
+}
+
+
+.mapblock {
+  padding-top: 120px;
+}
+
+.gotop {
+  display: block;
+  padding: 14px 0;
+  text-align: center;
+  background: #EFF6F4;
+}
+.gotop span,
+.gotop img {
+  display: inline-block;
+  vertical-align: middle;
+}
+.gotop span {
+  font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 130%;
+/* identical to box height, or 21px */
+
+letter-spacing: 0.02em;
+text-transform: uppercase;
+padding-right: 16px;
+/* Green */
+
+color: #49A399;
+}
+
+.footer {
+  padding: 50px 0 0 0;
+}
+
+.footer__main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer__right {
+  display: flex;
+  align-items: center;
+  margin: 0 -10px;
+  justify-content: flex-end;
+}
+
+.footer__left {
+  display: flex;
+  align-items: center;
+  margin: 0 -15px;
+}
+.footer__left > * {
+  padding: 0 15px;
+}
+.footer__right > * {
+  padding: 0 10px;
+}
+
+.footer__callback {
+  margin-left: 15px;
+}
+.footer__phone .phone span {
+ font-style: normal;
+  font-weight: bold;
+  font-size: 19px;
+  line-height: 120%;
+
+  /* Black */
+
+  color: #1E1E20;
+
+}
+
+
+.footermenu {}
+.footermenu__title {
+  font-style: normal;
+font-weight: 600;
+font-size: 18px;
+line-height: 120%;
+/* identical to box height, or 22px */
+
+margin-bottom: 10px;
+/* Black */
+
+color: #1E1E20;
+
+}
+.footermenu__links {}
+.footermenu__links li {
+  margin-bottom: 10px;
+}
+.footermenu__links li a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  color: #818A8A;
+}
+.footermenu__links li a:hover {
+  color: #000;
+}
+.footer__cols {
+  display: flex;
+  margin: 0 -12px;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+.footer__col {
+  padding: 0 12px;
+}
+
+.socials {}
+.socials__title {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  /* identical to box height, or 21px */
+  margin-bottom: 10px;
+
+  /* Gray */
+
+  color: #818A8A;
+}
+.socials__items {
+  margin: 0 -4px;
+  display: flex;
+  align-items: center;
+}
+.socials__item {
+  display: inline-block;
+   padding: 0 4px;
+   vertical-align: middle;
+}
+.socials__item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  line-height: 32px;
+
+ 
+  background: linear-gradient(96.52deg, #C79081 -20.28%, #DFA579 111.91%);
+  border-radius: 1000px;
+}
+.footer__end {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 -15px;
+  padding: 25px 0;
+  border-top: 1px solid #D8DBDA;
+}
+.footer__end > * {
+  padding: 0 15px;
+}
+.footer__info, .footer__info * {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 130%;
+  color: #818A8A;
+}
+
+
+
+
+
+
